/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package devicelockcontroller;

option java_package = "com.android.devicelockcontroller.proto";
option java_multiple_files = true;

enum DeviceIdentifierType {
  DEVICE_IDENTIFIER_TYPE_UNSPECIFIED = 0;
  // International Mobile Equipment Identity (IMEI).
  DEVICE_IDENTIFIER_TYPE_IMEI = 1;
  // Mobile Equipment Identity (MEID).
  DEVICE_IDENTIFIER_TYPE_MEID = 2;
  // Some devices (e.g. tablets) donâ€™t have an IMEI but do have a serial number.
  DEVICE_IDENTIFIER_TYPE_SERIAL = 3;
}

message DeviceInfo {
  // This comes from android.os.Build.VERSION.SDK_INT.
  optional int32 android_sdk_version = 1;
}
